src/launcher-util.h
@@ -31,7 +31,7 @@ struct weston_launcher;
 
 struct weston_launcher *
 weston_launcher_connect(struct weston_compositor *compositor, int tty,
-			const char *seat_id);
+			const char *seat_id, bool sync_drm);
 
 void
 weston_launcher_destroy(struct weston_launcher *launcher);
